# pr3proq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  logging.cpp  main.cpp  preproq.cpp  qcir.cpp  tests.cpp  writer.cpp
gperf/: gen.sh  gperf.inp  qcir_keywords.hpp
include/: bufferedinput.hpp  circuit.hpp  globals.hpp  logging.hpp  preproq.hpp  qcir.hpp  qcir_keywords.hpp  serializer.hpp  writer.hpp
